	  version used from R 0.99.0 to 1.3.1 is version 1.  The new
	  default format is version 2.  load() can read a version 2
	  saved workspace if it is compressed.

    	- save() and save.image() now take a `compress' argument to
	  specify that the saved image should be written using the zlib
	  compression facilities.

    	- save.image() now takes an argument `ascii'.


    o   New function reg.finalizer() to provide R interface to
        finalization.

    o   reshape() extends reshapeLong, reshapeWide, which are deprecated.

    o   duplicated() and unique() are now generic functions with
	methods for data frames (as well as atomic vectors).

    o   New option `download.file.method' can be used to set the
	default method for download.file() and functions which use it
	such as update.packages().

    o   Changes to the tcltk package:

        - New interface for accessing Tcl variables, effectively
          making the R representations lexically scoped. The old form
          is being deprecated.

        - Callbacks can now be expressions, with slightly unorthodox
          semantics. In particular this allows bindings to contain
          "break" expressions (this is necessary to bind code to
          e.g. Alt-x without having the key combination also insert an
          "x" in a text widget.)

        - A bunch of file handling and dialog functions (previously
          only available via tkcmd) have been added

    o   step() is now closer to stepAIC() and so handles a wider range
	of objects (but stepAIC [in MASS] is still more powerful).

    o	Functions such as help() which perform library or package index
	searches now use NULL as default for their `lib.loc' argument so
	that missingness can be propagated more easily.  The default
	corresponds to all currently known libraries as before.

    o   The methods package now uses C-level code (from within
        DispatchOrEval) to dispatch any methods defined for primitive