@@ -292,6 +292,12 @@ NEW FEATURES
 
     	- save.image() now takes an argument `ascii'.
 
+    	- save.image() now takes an argument `safe'.  If TRUE, a
+	  temporary file is used for creating the saved workspace.  The
+	  temporary file is renamed if the save succeeds.  This
+	  preserves an existing workspace if the save fails, but at
+	  the cost of using extra disk space during the save.
+
 
     o   New function reg.finalizer() to provide R interface to
         finalization.
